--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,14 @@ button {
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
+  transition: all 2s ease-in-out;
 }
+
+/*
+.show:hover{
+  background-color: red;
+}
+*/
 
 .space {
   width: 15px;
