--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,11 @@ button {
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
-  transition: all 2s ease-in-out;/* i can do some more here */
+  transition: all 2s ease-in;/* i can do some more here */
+}
+
+.transition__reset{
+  transition: none;
 }
 
 /*
