--- a/css/styles.css
+++ b/css/styles.css
@@ -86,12 +86,13 @@ button {
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
-  transition: all 2s ease-in;/* i can do some more here */
+  transition: all .5s ease-in;/* i can do some more here */
+
 }
 
-.transition__reset{
+/* .transition__reset{
   transition: none;
-}
+} */
 
 /*
 .show:hover{
@@ -99,21 +100,14 @@ button {
 }
 */
 
-.btn__lose{
+.btn__winlose{
   padding: 8px;
   margin: 50px auto;
-  background: red;
+  background: #FFFFFF;
   border-radius: 5px;
   font-size: var(--font-size-medium);
 }
 
-.btn__win{
-  padding: 8px;
-  margin: 50px auto;
-  background: yellow;
-  border-radius: 5px;
-  font-size: var(--font-size-medium);
-}
 
 .space {
   width: 15px;
@@ -122,6 +116,8 @@ button {
 .show {
   color: #000;
   background-color: #76CE82;
+
+
 }
 
 /* Keyboard */
